Fixed problem where selecting files in the explorer table would cause the scroll position to jump in Chrome.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -73,8 +73,6 @@
 
 @mixin opencms {
 	@include valo;
-  
-  
   	
   	.o-info-dialog {
   		width:400px !important;
@@ -1216,5 +1214,10 @@
 			font-weight: 800; 
 		}
 			
-	}  
+	}
+	
+	.v-table, .v-table * {
+	    /* Turn off Chrome scroll anchoring because it doesn't work with Vaadin tables and produces weird "jumping" effects when updating a table. */ 
+		overflow-anchor: none;
+	}
 }
